--- a/src/components/_news.html
+++ b/src/components/_news.html
@@ -1,5 +1,114 @@
 <section class="news">
-    <div class="container">
-        <h2 class="tl1">news</h2>
+    <div class="container news__c">
+        <div class="section-heading-swiper">
+            <div class="swiper-btn-container nav">
+                <button class="swiper-btn swiper-btn-prev "></button>
+                <button class="swiper-btn swiper-btn-next "></button>
+            </div>
+            <h2 class="tl2 txt-up name">
+                последние новости
+            </h2>
+            <a href="#" class="btn-arrow txt16 txt-up loadmore">
+                Смотреть все
+                <img src="./assets/images/icons/arrow-down-green.svg" alt="arrow">
+            </a>
+        </div>
+        <div class="swiper">
+            <ul class="swiper-wrapper">
+                <li class="swiper-slide news-item">
+                    <a href="#"></a>
+                    <div class="news-item-img">
+                        <img src="../assets/images/news.webp" alt="news">
+                    </div>
+                    <p class="txt24 txt-up news-item-name">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
+                        sunt similique, illo perspiciatis minima cupiditate?
+                    </p>
+                    <div class="news-item-footer">
+                        <p class="txt18 col-gr">12.12.12</p>
+
+                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24.8416 13.3596H2.15843"  stroke-width="2" stroke-miterlimit="10"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M14.6641 23.5371L24.8414 13.3598L14.6641 3.18241" stroke-width="2"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+
+                    </div>
+
+
+                </li>
+                <li class="swiper-slide news-item">
+                    <a href="#"></a>
+                    <div class="news-item-img">
+                        <img src="../assets/images/news.webp" alt="news">
+                    </div>
+                    <p class="txt24 txt-up news-item-name">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
+                        sunt similique, illo perspiciatis minima cupiditate?
+                    </p>
+                    <div class="news-item-footer">
+                        <p class="txt18 col-gr">12.12.12</p>
+
+                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24.8416 13.3596H2.15843"  stroke-width="2" stroke-miterlimit="10"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M14.6641 23.5371L24.8414 13.3598L14.6641 3.18241" stroke-width="2"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+
+                    </div>
+
+
+                </li>
+                <li class="swiper-slide news-item">
+                    <a href="#"></a>
+                    <div class="news-item-img">
+                        <img src="../assets/images/news.webp" alt="news">
+                    </div>
+                    <p class="txt24 txt-up news-item-name">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
+                        sunt similique, illo perspiciatis minima cupiditate?
+                    </p>
+                    <div class="news-item-footer">
+                        <p class="txt18 col-gr">12.12.12</p>
+
+                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24.8416 13.3596H2.15843"  stroke-width="2" stroke-miterlimit="10"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M14.6641 23.5371L24.8414 13.3598L14.6641 3.18241" stroke-width="2"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+
+                    </div>
+
+
+                </li>
+                <li class="swiper-slide news-item">
+                    <a href="#"></a>
+                    <div class="news-item-img">
+                        <img src="../assets/images/news.webp" alt="news">
+                    </div>
+                    <p class="txt24 txt-up news-item-name">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
+                        sunt similique, illo perspiciatis minima cupiditate?
+                    </p>
+                    <div class="news-item-footer">
+                        <p class="txt18 col-gr">12.12.12</p>
+
+                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24.8416 13.3596H2.15843"  stroke-width="2" stroke-miterlimit="10"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M14.6641 23.5371L24.8414 13.3598L14.6641 3.18241" stroke-width="2"
+                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+
+                    </div>
+
+
+                </li>
+            </ul>
+
+        </div>
     </div>
 </section>
