--- a/src/components/_services.html
+++ b/src/components/_services.html
@@ -1,5 +1,27 @@
 <section class="services">
-    <div class="container">
-        <h2 class="tl1">services</h2>
+    <div class="container services__c">
+
+        <div class="section-heading">
+            <p class="section-heading-name">Услуги</p>
+            <h2 class="tl2 section-heading-ttl">выполняем полный
+                комплекс услуг
+            </h2>
+            <p class="section-heading-body">ТСМ выполняет комплекс строительно-монтажных и отделочных
+                работ по организации офиса в классах А, В на разных стадиях
+                проекта (Shell&Core, Design& Build, Renovation)
+            </p>
+
+        </div>
+        <div class="services__c-list">
+            <p class="tl2">01</p>
+            <p class="tl2">Проектирование</p>
+            <hr>
+            <p class="tl2">02</p>
+            <p class="tl2">Строительство</p>
+            <hr>
+            <p class="tl2">03</p>
+            <p class="tl2">Эксплуатация</p>
+        </div>
+
     </div>
 </section>
