--- a/src/components/_contact-us.html
+++ b/src/components/_contact-us.html
@@ -1,5 +1,74 @@
 <section class="contact-us">
-    <div class="container">
-        <h2 class="tl1">contact-us</h2>
+    <div class="contact-us__bg">
+        <img src="../assets/images/contact-us.webp" alt="contact">
+    </div>
+    <div class="container contact-us__c">
+        <h2 class="tl2 ">свяжитесь с нами</h2>
+        <p class="txt24 col-wh txt-up contact-us__c-aside">Комплексное решение задач:
+            от идеи до реализации
+        </p>
+        <form class="form contact-us__c-form">
+
+            <label class="input-text form-input ">
+                <span class="input-text-input">
+                    <input type="text" name="name" data-required="y" placeholder="Имя">
+                </span>
+
+                <span class="input-text-error"></span>
+            </label>
+
+            <label class="input-text form-input ">
+                <span class="input-text-input">
+                    <input type="text" name="phone" data-required="y" placeholder="Телефон">
+                </span>
+
+                <span class="input-text-error"></span>
+            </label>
+
+            <label class="input-text form-input contact-us__c-form-row">
+                <span class="input-text-input">
+                    <input type="text" name="commentary"  placeholder="Комментарий">
+                </span>
+
+                <span class="input-text-error"></span>
+            </label>
+
+
+            <button class="btn-green contact-us__c-form-toleft txt18" type="submit">
+                ОСТАВИТЬ ЗАЯВКУ
+                <img src="./assets/images/icons/mail-black.svg" alt="mail">
+            </button>
+
+
+            <label class="checkbox form-input">
+                <input type="checkbox" data-required="y" name="policy">
+                <span class="checkbox-check"></span>
+
+                <span class="checkbox-text txt14">Принимаю политику конфиденциальности</span>
+              </label>
+
+            <a href="#" class="flex-row contact-us__c-form-toleft txt18">
+                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M9.65826 5.9134L9.2556 5.00742C8.99232 4.41505 8.86068 4.11885 8.66381 3.89218C8.41708 3.60811 8.09547 3.39911 7.73568 3.28902C7.44859 3.20117 7.12446 3.20117 6.47621 3.20117C5.52791 3.20117 5.05376 3.20117 4.65573 3.38346C4.18687 3.59819 3.76344 4.06445 3.59473 4.55177C3.45151 4.96546 3.49254 5.3906 3.57458 6.24087C4.44791 15.2914 9.40982 20.2533 18.4603 21.1266C19.3106 21.2087 19.7358 21.2497 20.1494 21.1065C20.6368 20.9378 21.103 20.5143 21.3178 20.0455C21.5 19.6474 21.5 19.1733 21.5 18.225C21.5 17.5767 21.5 17.2526 21.4122 16.9655C21.3021 16.6057 21.0931 16.2841 20.809 16.0374C20.5824 15.8405 20.2862 15.7089 19.6938 15.4456L18.7878 15.0429C18.1463 14.7578 17.8255 14.6153 17.4996 14.5843C17.1876 14.5546 16.8731 14.5984 16.5811 14.7121C16.276 14.8309 16.0064 15.0556 15.467 15.505C14.9302 15.9524 14.6618 16.1761 14.3338 16.2959C14.043 16.4021 13.6586 16.4415 13.3524 16.3963C13.0069 16.3454 12.7424 16.2041 12.2133 15.9213C10.5673 15.0417 9.65953 14.134 8.77987 12.4879C8.49714 11.9589 8.35578 11.6943 8.30487 11.3489C8.25974 11.0426 8.29908 10.6582 8.4053 10.3675C8.52512 10.0395 8.74881 9.77103 9.19619 9.23417C9.64562 8.69485 9.87034 8.42519 9.98915 8.12008C10.1028 7.82811 10.1466 7.51357 10.1169 7.20165C10.0859 6.87569 9.94338 6.55493 9.65826 5.9134Z"
+                        stroke="#8BC34A" stroke-width="2" stroke-linecap="round" />
+                </svg>
+                +7 499 136 26 49
+            </a>
+
+            <a href="#" class="flex-row txt18">
+                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M4.50049 4.20117H20.5005C21.6005 4.20117 22.5005 5.10117 22.5005 6.20117V18.2012C22.5005 19.3012 21.6005 20.2012 20.5005 20.2012H4.50049C3.40049 20.2012 2.50049 19.3012 2.50049 18.2012V6.20117C2.50049 5.10117 3.40049 4.20117 4.50049 4.20117Z"
+                        stroke="#8BC34A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M22.5005 6.20117L12.5005 13.2012L2.50049 6.20117" stroke="#8BC34A" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
+                info@t-c-m.ru
+            </a>
+
+
+        </form>
     </div>
 </section>
