--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -1,5 +1,89 @@
 <header class="header">
-    <div class="container">
-        <h2 class="tl1">header</h2>
+    <div class="header-wrp">
+        <div class="container header__c">
+            <a href="#" class="header__c-logo">
+                <svg width="133" height="56" fill="white" viewBox="0 0 133 56" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_6193_2603)">
+                        <path d="M25.4221 46.313V19.8361H16.5965V13.6291H41.7156V19.8361H32.793V46.313H25.4221Z" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M126.927 3.33295C117.128 8.46806 101.518 13.7408 90.7271 15.5605C88.722 15.8986 87.0841 16.256 87.0868 16.3547C87.0899 16.4537 87.237 16.7633 87.4144 17.0431C87.6958 17.487 88.4402 17.4076 93.2589 16.4212C96.6805 15.7206 98.884 15.1081 99.0522 14.8104C99.2265 14.5018 99.8979 14.3302 100.931 14.3302C104.619 14.3302 114.926 10.7865 122.603 6.87934C125.447 5.43169 127.775 4.31263 127.775 4.39199C127.775 5.04477 118.587 16.1349 112.75 22.5271C109.934 25.6106 109.205 26.6076 109.353 27.1726C109.558 27.9583 110.451 27.0881 116.445 20.2609C121.561 14.4323 132.473 0.71911 131.925 0.805583C131.787 0.827286 129.538 1.96465 126.927 3.33295ZM76.9085 17.5517C76.9085 17.5517 61.3533 20.2154 55.3375 22.1884C52.5066 23.1165 52.1855 23.3125 51.5008 24.5306C50.6785 25.9935 50.7389 26.0817 52.0858 25.3889C55.3348 23.7177 66.7407 20.7661 73.9413 19.7332C76.4415 19.3748 76.9085 19.2096 76.9085 18.684C76.9085 17.9092 76.9085 17.5517 76.9085 17.5517ZM40.8898 31.2361C37.7748 34.6075 35.4397 38.2844 33.813 42.3795C33.2694 43.7478 32.8245 45.386 32.8245 45.386C32.8245 45.386 31.7987 45.4135 29.0943 45.3172C23.4817 45.1171 19.1476 44.2456 14.1339 42.3093C10.0219 40.7213 7.90075 39.5381 6.68607 38.1546C5.72945 37.065 5.60127 37.0223 3.57272 37.1193L1.45703 37.22L2.74462 38.4842C7.11267 42.7715 18.7342 46.2409 30.5216 46.7764L35.1704 46.9876L36.8856 48.5726C42.0513 53.3466 49.1359 55.3578 59.26 54.9248C64.4466 54.703 69.5075 53.7878 74.0261 52.2536C79.1503 50.5144 89.9641 44.6743 89.9641 43.7204C89.9641 42.8232 88.4741 43.5216 86.5249 44.7105C80.326 48.4912 71.0992 52.1292 65.0397 53.1818C58.0822 54.39 47.6035 53.3476 42.4823 50.9372C40.2181 49.8714 37.3818 47.4665 37.7283 46.9059C37.8507 46.7075 38.5907 46.5454 39.3723 46.5454C40.8359 46.5454 48.1416 45.4176 49.9494 44.913C50.964 44.6295 50.9647 44.6278 50.2 44.2168C49.5822 43.8848 48.5296 43.9367 44.7743 44.485C38.9762 45.3314 34.52 45.6207 34.52 45.15C34.52 44.5362 37.5496 38.7426 38.9935 36.5947C39.7653 35.4464 40.9919 33.7872 41.7196 32.9076C42.757 31.6525 43.0191 31.074 42.9353 30.2232L42.8282 29.1384L40.8898 31.2361ZM100.934 34.4379C99.6928 35.595 89.4175 42.7115 89.2859 43.1544C89.1179 43.7215 89.5584 44.2748 90.1337 43.9086C90.5787 43.6253 100.078 36.8469 101.409 35.7713C103.079 34.422 103.698 33.7024 103.698 33.1124C103.698 32.6671 103.584 32.31 103.444 32.3185C103.304 32.3273 102.174 33.2809 100.934 34.4379ZM71.1437 37.0982C68.8123 38.0169 65.1499 39.3726 63.0051 40.1112C59.2895 41.3907 59.181 41.4541 60.7093 41.4565C61.7867 41.4582 63.4011 41.0241 65.6264 40.135C69.7018 38.5062 75.5521 35.8005 75.5521 35.5441C75.5521 35.44 75.5137 35.3712 75.4673 35.3915C75.4208 35.4115 73.475 36.1796 71.1437 37.0982Z"
+                            fill="#8BC34A" stroke="#8BC34A" stroke-width="0.318967" />
+                        <path
+                            d="M67.3897 39.621L68.4565 45.4401C67.1472 46.0705 64.0437 46.8464 60.1158 46.8464C48.8171 46.8464 42.998 39.7665 42.998 30.456C42.998 19.3027 50.9508 13.1442 60.8432 13.1442C64.6741 13.1442 67.5837 13.8716 68.893 14.599L67.3412 20.418C65.8864 19.7876 63.8013 19.2057 61.1342 19.2057C55.3151 19.2057 50.7568 22.7457 50.7568 30.0195C50.7568 36.566 54.6362 40.6879 61.1827 40.6879C63.4618 40.6879 65.8864 40.2514 67.3897 39.621Z" />
+                        <path
+                            d="M103.535 46.313L103.001 33.8019C102.856 29.8741 102.71 25.1218 102.71 20.3696H102.613C101.547 24.5399 100.189 29.1952 98.928 33.0261L94.9516 45.7796H89.181L85.6895 33.1715C84.6227 29.2922 83.5559 24.6369 82.7315 20.3696H82.6345C82.489 24.7824 82.2951 29.8256 82.1011 33.8989L81.4707 46.313H74.6333L76.7184 13.6291H86.5624L89.7629 24.5399C90.8297 28.3223 91.7996 32.3957 92.527 36.2266H92.7209C93.5938 32.4442 94.7091 28.1283 95.8244 24.4914L99.2674 13.6291H108.966L110.712 46.313H103.535Z" />
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_6193_2603">
+                            <rect width="133" height="55.8042" fill="white" />
+                        </clipPath>
+                    </defs>
+                </svg>
+            </a>
+            <div class="desktop">
+                <nav class="header__c-nav">
+                    <a href="#" class="btn-tr txt16">Услуги</a>
+                    <a href="#" class="btn-tr txt16">наши проекты</a>
+                    <a href="#" class="btn-tr txt16">О компании</a>
+                    <a href="#" class="btn-tr txt16">Новости</a>
+                    <a href="#" class="btn-tr txt16">контакты</a>
+                </nav>
+            </div>
+            <div class="desktop">
+                <div class="header__c-desk-right">
+                    <a href="#" class="btn-tr txt16">+7 499 136 26 49</a>
+                    <a href="#" class="btn-tr txt16">Заявка
+                        <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M5.66732 5.6665H28.334C29.8923 5.6665 31.1673 6.9415 31.1673 8.49984V25.4998C31.1673 27.0582 29.8923 28.3332 28.334 28.3332H5.66732C4.10898 28.3332 2.83398 27.0582 2.83398 25.4998V8.49984C2.83398 6.9415 4.10898 5.6665 5.66732 5.6665Z"
+                                stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M31.1673 8.5L17.0007 18.4167L2.83398 8.5" stroke="white" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+
+                    </a>
+                    <a href="#" class="btn-tr txt16">ru</a>
+                </div>
+
+
+            </div>
+            <div class="mobile header__c-lang-mob">
+                <button class="btn-tr txt16">
+                    ru
+                </button>
+            </div>
+            <div class="mobile">
+                <button class="header__c-btn ">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+           
+
+            <div class="mobile">
+                <div class="header__c-modal">
+                    <div class="header__c-modal-self">
+                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Услуги</a>
+                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Наши проекты</a>
+                        <a href="#" class="txt-up txt16 header__c-modal-self-item">О компании</a>
+                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Новости</a>
+                        <a href="#" class="txt-up txt16 header__c-modal-self-item">Контакты</a>
+                        <div class="header__c-modal-self-btns ">
+                            <button class="txt-up txt16 header__c-modal-self-btns-e">ru</button>
+                            <button class="txt-up txt16 header__c-modal-self-btns-e flex-row">
+                                Заявка
+                                <img src="../assets/images/icons/mail-black.svg" alt="mail">
+                            </button>
+                        </div>
+                        <a href="#" class="txt16 header__c-modal-self-item">+7 499 136 26 49</a>
+                    </div>
+                   
+                </div>
+            </div>
+
+
+        </div>
     </div>
 </header>
