--- a/src/components/_our-projects.html
+++ b/src/components/_our-projects.html
@@ -1,5 +1,85 @@
 <section class="our-projects">
-    <div class="container">
-        <h2 class="tl1">our-projects</h2>
+    <div class="container our-projects__c">
+        <div class="section-heading-swiper">
+
+            <div class="swiper-btn-container nav">
+                <button class="swiper-btn swiper-btn-prev "></button>
+                <button class="swiper-btn swiper-btn-next "></button>
+            </div>
+
+            <h2 class="tl2 txt-up name">
+                наши проекты
+            </h2>
+
+
+            <a href="#" class="btn-arrow txt16 txt-up loadmore">
+                Смотреть все
+                <img src="./assets/images/icons/arrow-down-green.svg" alt="arrow">
+            </a>
+
+
+        </div>
+
+        <div class="our-projects__c-swiper swiper">
+            <ul class="swiper-wrapper">
+                <li class="swiper-slide our-projects-item">
+                    <a href="#"></a>
+                    <div class=" our-projects-item-img">
+                        <img src="../assets/images/projects.webp" alt="projects">
+                    </div>
+                    <p class="our-projects-item-name">Alfa Research Center</p>
+                    <p class="txt20 col-grn">2023</p>
+                </li>
+                <li class="swiper-slide our-projects-item">
+                    <a href="#"></a>
+                    <div class=" our-projects-item-img">
+                        <img src="../assets/images/projects.webp" alt="projects">
+                    </div>
+                    <p class="our-projects-item-name">Alfa Research Center</p>
+                    <p class="txt20 col-grn">2023</p>
+                </li>
+                <li class="swiper-slide our-projects-item">
+                    <a href="#"></a>
+                    <div class=" our-projects-item-img">
+                        <img src="../assets/images/projects.webp" alt="projects">
+                    </div>
+                    <p class="our-projects-item-name">Alfa Research Center</p>
+                    <p class="txt20 col-grn">2023</p>
+                </li>
+                <li class="swiper-slide our-projects-item">
+                    <a href="#"></a>
+                    <div class=" our-projects-item-img">
+                        <img src="../assets/images/projects.webp" alt="projects">
+                    </div>
+                    <p class="our-projects-item-name">Alfa Research Center</p>
+                    <p class="txt20 col-grn">2023</p>
+                </li>
+                <li class="swiper-slide our-projects-item">
+                    <a href="#"></a>
+                    <div class=" our-projects-item-img">
+                        <img src="../assets/images/projects.webp" alt="projects">
+                    </div>
+                    <p class="our-projects-item-name">Alfa Research Center</p>
+                    <p class="txt20 col-grn">2023</p>
+                </li>
+                <li class="swiper-slide our-projects-item">
+                    <a href="#"></a>
+                    <div class=" our-projects-item-img">
+                        <img src="../assets/images/projects.webp" alt="projects">
+                    </div>
+                    <p class="our-projects-item-name">Alfa Research Center</p>
+                    <p class="txt20 col-grn">2023</p>
+                </li>
+                <li class="swiper-slide our-projects-item">
+                    <a href="#"></a>
+                    <div class=" our-projects-item-img">
+                        <img src="../assets/images/projects.webp" alt="projects">
+                    </div>
+                    <p class="our-projects-item-name">Alfa Research Center</p>
+                    <p class="txt20 col-grn">2023</p>
+                </li>
+
+            </ul>
+        </div>
     </div>
 </section>
