--- a/src/components/_princeples.html
+++ b/src/components/_princeples.html
@@ -1,5 +1,29 @@
-<section class="princeples">
-    <div class="container">
-        <h2 class="tl1">princeples</h2>
+<section class="princeples ">
+    <div class="section-bg">
+        <div class="section-bg-img">
+            <img src="../assets/images/principles.webp" alt="section-bg">
+        </div>
+        <div class="container princeples__top">
+            <h2 class="tl2 txt-up">НадЁжность
+                и профессионализм:
+                наши принципы в строительстве </h2>
+        </div>
     </div>
+    <ul class="container princeples__bottom">
+        <li class="princeples__bottom-item">
+            <p class="princeples__bottom-item-count">364</p>
+            <p class="tl3 txt-up">Профессиональные
+                мастера и рабочие</p>
+        </li>
+        <li class="princeples__bottom-item">
+            <p class="princeples__bottom-item-count">51</p>
+            <p class="tl3 txt-up">Человек в инженерно-
+                техническом отделе</p>
+        </li>
+        <li class="princeples__bottom-item">
+            <p class="princeples__bottom-item-count">230</p>
+            <p class="tl3 txt-up">Реализованных
+                проектов</p>
+        </li>
+    </ul>
 </section>
