--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,6 +4,12 @@
   @content;
 }
 
+@mixin desktop {
+  @media (min-width: 48em) {
+    @content;
+  }
+}
+
 @mixin small-tablet {
   @media (max-width: 48em) {
     @content;
@@ -15,5 +21,18 @@
   width: 100%;
   height: $height;
 
+  @content;
+}
+
+@mixin wrap-text($lines) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -moz-box;
+  -moz-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  -webkit-box-orient: vertical;
+  line-clamp: $lines;
+  box-orient: vertical;
   @content;
 }
