--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -33,7 +33,7 @@
             <div class="desktop">
                 <div class="header__c-desk-right">
                     <a href="#" class="btn-tr txt16">+7 499 136 26 49</a>
-                    <a href="#" class="btn-tr txt16">Заявка
+                    <button  class="btn-tr txt16 modal-opener" data-modal="callback">Заявка
                         <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M5.66732 5.6665H28.334C29.8923 5.6665 31.1673 6.9415 31.1673 8.49984V25.4998C31.1673 27.0582 29.8923 28.3332 28.334 28.3332H5.66732C4.10898 28.3332 2.83398 27.0582 2.83398 25.4998V8.49984C2.83398 6.9415 4.10898 5.6665 5.66732 5.6665Z"
@@ -42,7 +42,7 @@
                                 stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
 
-                    </a>
+                    </button>
                     <a href="#" class="btn-tr txt16">ru</a>
                 </div>
 
