--- a/src/scss/components/_contact-us.scss
+++ b/src/scss/components/_contact-us.scss
@@ -91,6 +91,7 @@
                 }
             }
             & .checkbox{
+                align-self: center;
                 @include small-tablet{
                     margin-top: 4rem;
                     
