--- a/src/components/_news.html
+++ b/src/components/_news.html
@@ -1,5 +1,5 @@
-<section class="news">
-    <div class="container news__c">
+<section class="last-news">
+    <div class="container last-news__c">
         <div class="section-heading-swiper">
             <div class="swiper-btn-container nav">
                 <button class="swiper-btn swiper-btn-prev "></button>
@@ -15,16 +15,16 @@
         </div>
         <div class="swiper">
             <ul class="swiper-wrapper">
-                <li class="swiper-slide news-item">
+                <li class="swiper-slide last-news-item">
                     <a href="#"></a>
-                    <div class="news-item-img">
+                    <div class="last-news-item-img">
                         <img src="../assets/images/news.webp" alt="news">
                     </div>
-                    <p class="txt24 txt-up news-item-name">
+                    <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
                         sunt similique, illo perspiciatis minima cupiditate?
                     </p>
-                    <div class="news-item-footer">
+                    <div class="last-news-item-footer">
                         <p class="txt18 col-gr">12.12.12</p>
 
                         <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
@@ -38,16 +38,16 @@
 
 
                 </li>
-                <li class="swiper-slide news-item">
+                <li class="swiper-slide last-news-item">
                     <a href="#"></a>
-                    <div class="news-item-img">
+                    <div class="last-news-item-img">
                         <img src="../assets/images/news.webp" alt="news">
                     </div>
-                    <p class="txt24 txt-up news-item-name">
+                    <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
                         sunt similique, illo perspiciatis minima cupiditate?
                     </p>
-                    <div class="news-item-footer">
+                    <div class="last-news-item-footer">
                         <p class="txt18 col-gr">12.12.12</p>
 
                         <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
@@ -61,16 +61,16 @@
 
 
                 </li>
-                <li class="swiper-slide news-item">
+                <li class="swiper-slide last-news-item">
                     <a href="#"></a>
-                    <div class="news-item-img">
+                    <div class="last-news-item-img">
                         <img src="../assets/images/news.webp" alt="news">
                     </div>
-                    <p class="txt24 txt-up news-item-name">
+                    <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
                         sunt similique, illo perspiciatis minima cupiditate?
                     </p>
-                    <div class="news-item-footer">
+                    <div class="last-news-item-footer">
                         <p class="txt18 col-gr">12.12.12</p>
 
                         <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
@@ -84,16 +84,16 @@
 
 
                 </li>
-                <li class="swiper-slide news-item">
+                <li class="swiper-slide last-news-item">
                     <a href="#"></a>
-                    <div class="news-item-img">
+                    <div class="last-news-item-img">
                         <img src="../assets/images/news.webp" alt="news">
                     </div>
-                    <p class="txt24 txt-up news-item-name">
+                    <p class="txt24 txt-up last-news-item-name">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, error velit. Aperiam amet iusto
                         sunt similique, illo perspiciatis minima cupiditate?
                     </p>
-                    <div class="news-item-footer">
+                    <div class="last-news-item-footer">
                         <p class="txt18 col-gr">12.12.12</p>
 
                         <svg width="27" height="27" viewBox="0 0 27 27" fill="none" stroke="#8BC34A" xmlns="http://www.w3.org/2000/svg">
