--- a/src/scss/ui/section.scss
+++ b/src/scss/ui/section.scss
@@ -49,7 +49,7 @@
 .section-bg {
     width: 100%;
     position: relative;
-    min-height: 90vh;
+    min-height: 100rem;
     box-shadow: 0px -26rem 13.5rem -8.2rem $bg inset;
 
     @include small-tablet {
