--- a/src/components/_bread.html
+++ b/src/components/_bread.html
@@ -1,6 +1,8 @@
-<ul class="bread">
-    <li class="bread-item">Главная</li>
-    <li class="bread-item">Главная</li>
-    <li class="bread-item">Главная</li>
-    <li class="bread-item bread-item_current">Текущая</li>
-</ul>
+<div class="bread">
+    <ul class="bread__list txt18">
+        <li class="bread__list-item "><a href="#">Главная</a></li>
+        <li class="bread__list-item"><a href="#">Главная</a></li>
+        <li class="bread__list-item"><a href="#">Главная</a></li>
+        <li class="bread__list-item bread__list-item_current"><a href="#">Текущая</a></li>
+    </ul>
+</div>
