--- a/src/components/_card-news.html
+++ b/src/components/_card-news.html
@@ -1,4 +1,33 @@
 <li class="card-news">
-    <p class="tl3">card news</p>
+    <p class="txt18 col-gr card-news__date">02.02.2021</p>
+    <div class="card-news__img">
+        <img src="../assets/images/projects.webp" alt="img">
+    </div>
+    <div class="card-news__info">
+        <h3 class="tl3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam accusantium, consectetur
+            aspernatur magnam cupiditate alias culpa quam veritatis nesciunt cum!</h3>
+        <div class="card-news__info-body">
+            <p class="txt18 card-news__info-body-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptatum, sapiente, modi sint sit
+                odio
+                facilis minus dolor consequatur delectus maxime temporibus? Aliquid, ad earum nesciunt fuga quod fugiat
+                quam, ab nobis provident similique vitae nostrum eligendi ipsum libero ratione. Alias delectus laborum
+                beatae deleniti magnam ullam corporis ipsa doloremque aspernatur odio in praesentium repellendus
+                maiores,
+                harum quo laboriosam? Suscipit, fugit! Fugit nisi quibusdam vitae! Eum dignissimos, rem rerum
+                consectetur
+                debitis vitae pariatur iste, ullam vero ducimus soluta minima dolorem illo assumenda officia enim a
+                labore.
+                Id a sequi harum quo culpa quod officia! Debitis aliquid rerum tenetur quasi inventore?
+            </p>
+        </div>
+
+    </div>
+    <a href="#" class="card-news__link txt16 txt-up flex-row">
+      
+            подробнее
+       
+        <img src="./assets/images/icons/arrow-down-green.svg" alt="V">
+    </a>
 
 </li>
