--- a/src/components/_card-project.html
+++ b/src/components/_card-project.html
@@ -1,4 +1,28 @@
-<li class="card-projects">
-    <p class="tl3">card projects</p>
+<li class="card-project">
+    <a href="#" class="card-project__top txt18">
+        <span class="col-gr">Россия, Москва, 2021</span>
+        <img src="../assets/images/icons/arrow-down-green.svg" alt=">">
+    </a>
+    <a href="#" class="txt24 card-project__name">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
+        eius.</a>
+    <!-- слайдер накидывается на элемент (на новую карточку надо инитить новый слайдер) -->
+    <div class="card-project__imgs swiper">
+        <div class="swiper-nav">
+            <button class="swiper-btn swiper-btn-prev"></button>
+            <button class="swiper-btn swiper-btn-next"></button>
+        </div>
 
+        <ul class="swiper-wrapper">
+            <li class="swiper-slide">
+                <img src="../assets/images/projects.webp" alt="img">
+            </li>
+            <li class="swiper-slide">
+                <img src="../assets/images/heading.webp" alt="img">
+            </li>
+            <li class="swiper-slide">
+                <img src="../assets/images/news.webp" alt="img">
+            </li>
+        </ul>
+
+    </div>
 </li>
