--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
 @import './scss/fonts';
 @import './scss/libs/set';
-@import 'swiper/css';
+@import 'swiper/scss';
+@import 'swiper/scss/grid';
+@import 'swiper/scss/autoplay';
+@import 'swiper/scss/effect-fade';
 
 @import './scss/style';
 
