--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -108,7 +108,7 @@
         }
 
         & .btn-tr {
-            padding: 3.3rem;
+            padding:1rem  3.3rem;
         }
 
         &-lang-mob {
