--- a/src/scss/dev/zatz.scss
+++ b/src/scss/dev/zatz.scss
@@ -11,6 +11,7 @@
 
 
 /* components */
+@import '../components/bread';
 @import '../components/clients';
 @import '../components/card-news';
 @import '../components/card-project';
