--- a/src/scss/ui/different.scss
+++ b/src/scss/ui/different.scss
@@ -1,8 +1,34 @@
 .marked-list {
     display: block;
     padding-left: 2.4rem;
-   
-    & li{
+
+    & li {
         list-style: url(../../assets/images/icons/list-dot.svg) !important;
+    }
+}
+
+.loadMore {
+    display: flex;
+    align-items: center;
+    gap: 1.8rem;
+    font-family: EuropeExt;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0.06em;
+    text-align: left;
+    text-transform: uppercase;
+
+    margin: auto;
+
+
+    @include small-tablet {
+        gap: 3.6rem;
+        font-size: 2.8rem;
+    }
+
+    & img,
+    & svg {
+        @include same-size(2.3rem, 2.3rem);
     }
 }
