--- a/src/components/_bread.html
+++ b/src/components/_bread.html
@@ -3,6 +3,9 @@
         <li class="bread__list-item "><a href="#">Главная</a></li>
         <li class="bread__list-item"><a href="#">Главная</a></li>
         <li class="bread__list-item"><a href="#">Главная</a></li>
+        <li class="bread__list-item"><a href="#">Главная</a></li>
+        <li class="bread__list-item"><a href="#">Главная</a></li>
+        <li class="bread__list-item"><a href="#">Главная</a></li>
         <li class="bread__list-item bread__list-item_current"><a href="#">Текущая</a></li>
     </ul>
 </div>
