--- a/src/components/_footer.html
+++ b/src/components/_footer.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-    <div class="footer-wrp">
+<footer class="footer bg-bg">
+    <div class="footer-wrp ">
 
         <div class="container footer__c">
             <a href="#" class="footer__c-logo">
