--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,9 +1,8 @@
 .footer {
-    padding: 20rem 0 8rem;
-    background-color: $white;
+    padding: 20rem 0 0;
     position: relative;
     @include small-tablet{
-        padding: 18rem 0 6.6rem;
+        padding: 18rem 0 0;
     }
 
 
